--- a/style.css
+++ b/style.css
@@ -32,6 +32,8 @@ a {
   align-items: center;
   padding: 1.5rem 4.5rem;
   color: white;
+  position: sticky;
+  top: 0;
 }
 
 /* MENU STYLING */
@@ -94,6 +96,10 @@ a {
 }
 
 @media(max-width:900px) {
+  .nav-bar {
+    padding: 1.5rem 1rem;
+  }
+
   .exit img {
     width: 2rem;
   }
