--- a/style.css
+++ b/style.css
@@ -1,14 +1,22 @@
-@import url('https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,300;0,400;0,500;0,600;0,700;1,400&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,300;0,400;0,500;0,600;0,700;1,400&display=swap');
+
+
+@font-face {
+  font-family: "Aderra";
+  src: url(/fonts/aderra.otf);
+
+}
 
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: 'Raleway', sans-serif;
+  font-family: 'Montserrat', sans-serif;
 }
 
 body {
   background-color: #000;
+  color: white;
 }
 
 ul {
@@ -25,6 +33,11 @@ a {
   width: 12rem;
 }
 
+.logo-small img {
+  width: 3rem;
+  display: none;
+}
+
 
 .nav-bar {
   display: flex;
@@ -32,6 +45,7 @@ a {
   align-items: center;
   padding: 1.5rem 4.5rem;
   color: white;
+  background: #000;
   position: sticky;
   top: 0;
 }
@@ -49,6 +63,7 @@ a {
 }
 
 .menu {
+
   opacity: 0;
   display: flex;
   flex-direction: row;
@@ -69,6 +84,8 @@ a {
 }
 
 .menu-btn {
+  font-family: 'Aderra', sans-serif;
+  font-weight: 700;
   padding: .75rem 1rem;
   transition: all 0.25s ease-in-out;
 }
@@ -80,7 +97,7 @@ a {
 }
 
 .nav-link {
-
+  font-family: 'Aderra', sans-serif;
   font-size: 5rem;
   font-weight: 600;
   transition: all 0.25s ease-in-out;
@@ -111,6 +128,14 @@ a {
     padding: 1.5rem 1rem;
   }
 
+  .logo-large img {
+    display: none;
+  }
+
+  .logo-small img {
+    display: block;
+  }
+
   .exit img {
     width: 2rem;
   }
@@ -123,4 +148,38 @@ a {
   .information {
     visibility: hidden;
   }
+}
+
+/* HERO SECTION */
+.hero-sect {
+
+
+  height: 100vh;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+/* ABOUT US */
+.about-us {
+  height: 100vh;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 15%;
+
+}
+
+.about-title h3 {
+  text-align: center;
+  font-family: 'Aderra', sans-serif;
+  font-size: 4rem;
+}
+
+.about-para {
+  text-align: center;
+  padding: 3rem 0;
 }
