--- a/style.css
+++ b/style.css
@@ -102,9 +102,7 @@ a {
   font-family: 'Aderra', Montserrat, sans-serif;
   font-weight: 700;
   display: inline-block;
-
-  padding: 2em;
-  margin: -2em;
+  padding: 2rem;
   transition: all 0.25s ease-in-out;
 }
 
