--- a/style.css
+++ b/style.css
@@ -142,7 +142,7 @@ a {
 
 @media(max-width:900px) {
   .nav-bar {
-    padding: 1.5rem 0 0 1.5rem;
+    padding: 1.5rem 1.5rem 0 1.5rem;
   }
 
   .logo-large img {
@@ -151,10 +151,6 @@ a {
 
   .logo-small img {
     display: block;
-  }
-
-  .menu-btn {
-    padding: 1.5rem;
   }
 
   .exit img {
