--- a/style.css
+++ b/style.css
@@ -2,6 +2,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Barlow:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300&display=swap');
 
 
+html {
+  font-size: 62.5%;
+}
 
 :root {
   --clr-light: #e4e4e4;
@@ -41,7 +44,6 @@
 body {
   background-color: var(--background);
   color: var(--foreground);
-
 }
 
 ul {
@@ -66,11 +68,11 @@ a {
 
 /* NAVIGATION BAR */
 .logo-large img {
-  width: 12rem;
+  width: 19.2rem;
 }
 
 .logo-small img {
-  width: 3rem;
+  width: 4.8rem;
   display: none;
 }
 
@@ -79,7 +81,7 @@ a {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 1.5rem 2.5rem;
+  padding: 2.4rem 4rem;
   background: var(--background);
   position: sticky;
   top: 0;
@@ -88,17 +90,13 @@ a {
 /* MENU STYLING */
 
 .exit img {
-  width: 3.5rem;
+  width: 5.6rem;
 }
 
 .exit {
   position: absolute;
-  top: 1.5rem;
-  right: 2.5rem;
-}
-
-.scroll {
-  display: none;
+  top: 2.4rem;
+  right: 4rem;
 }
 
 .menu {
@@ -114,7 +112,7 @@ a {
   align-items: center;
   backdrop-filter: blur(10px);
   -webkit-backdrop-filter: blur(10px);
-  padding: 0 2rem;
+  padding: 0 3.2rem;
 
 }
 
@@ -125,24 +123,24 @@ a {
 
 .menu-btn {
   font-family: var(--title);
+  font-size: 2rem;
   font-weight: 700;
-  padding: 1.5rem;
+  padding: 2.4rem;
   transition: all 0.25s ease-in-out;
 }
 
 .menu-btn:hover {
   color: var(--clr-accent);
   transition: all 0.25s ease-in-out;
-
 }
 
 .nav-link {
   color: var(--clr-light);
   display: block;
   font-family: var(--title);
-  font-size: 5rem;
+  font-size: 8rem;
   font-weight: 600;
-  padding-bottom: 1.5rem;
+  padding-bottom: 2.4rem;
   transition: all 0.25s ease-in-out;
 
 }
@@ -156,10 +154,11 @@ a {
 .info-container {
   width: 40%;
   color: var(--clr-light);
+  font-size: 1.6rem;
 }
 
 .address {
-  padding-top: 1rem;
+  padding-top: 1.6rem;
   line-height: 1.75;
 }
 
@@ -167,27 +166,27 @@ a {
 .socials a {
   color: var(--clr-light);
   display: inline-block;
-  padding: 1rem 1rem 1rem 0;
+  padding: 1.6rem 1.6rem 1.6rem 0;
 }
 
 .data {
   display: block;
-  padding: 1rem 1rem 0.25rem 0;
+  padding: 1.6rem 1.6rem 0.4rem 0;
 }
 
 .info {
-  margin-bottom: 2rem;
+  margin-bottom: 3.2rem;
 }
 
 .title {
-  color: var(--clr-accent);
-  font-size: 2rem;
+  color: var(--clr-secondary);
+  font-size: 4.8rem;
   font-family: var(--title);
+  font-weight: 300;
 }
 
-
 .nav {
-  margin-top: -1.2rem;
+  margin-top: -2rem;
 }
 
 @media(max-width:900px) {
@@ -200,16 +199,20 @@ a {
     flex-direction: column;
     justify-content: center;
     align-items: flex-start;
-    padding: 8rem 1.5rem;
+    padding: 12.8rem 2.4rem;
     overflow: scroll;
   }
 
+  .menu-btn {
+    font-size: 1.8rem;
+  }
+
   .nav-list {
-    padding: 10rem 0 15rem 0;
+    padding: 16rem 0 34rem 0;
   }
 
   .nav-bar {
-    padding: 1.5rem 0 0 1.5rem;
+    padding: 2.4rem 0 0 2.4rem;
   }
 
   .logo-large img {
@@ -221,44 +224,31 @@ a {
   }
 
   .exit img {
-    width: 3rem;
+    width: 4.8rem;
   }
 
   .exit {
-    top: 2rem;
-    right: 0.5rem;
-    padding: 1.5rem;
-  }
-
-  .scroll img {
-    width: 5rem;
-  }
-
-  .scroll {
-    display: block;
-    position: fixed;
-    bottom: 2.5%;
-    right: 3%;
-    text-align: center;
+    top: 3.2rem;
+    right: 0.8rem;
+    padding: 2.4rem;
   }
 
   .nav-link {
-    font-size: 3rem;
+    font-size: 4.8rem;
   }
 
   .info-container {
     width: 90%;
-
   }
 
   .socials a {
     display: block;
-    padding: 1rem 1rem 1rem 0;
+    padding: 1.6rem 1.6rem 1.6rem 0;
   }
 
   .data {
     display: block;
-    padding: 1rem 1rem 0.25rem 0;
+    padding: 1.6rem 1.6rem 0.4rem 0;
   }
 }
 
@@ -270,6 +260,21 @@ a {
   display: flex;
   justify-content: center;
   align-items: center;
+  font-size: 1.6rem;
+}
+
+.services {
+  height: 100vh;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  font-size: 1.6rem;
+}
+
+.service-title {
+  font-size: 5.6rem;
 }
 
 /* ABOUT US */
@@ -279,20 +284,20 @@ a {
   display: flex;
   flex-direction: row;
   align-items: start;
-  padding: 5rem 2.5rem;
+  padding: 8rem 4rem;
   text-transform: uppercase;
 }
 
 .tagline-small {
-  font-size: 4rem;
-  line-height: 4.25rem;
-  padding-right: 8rem;
+  font-size: 6.4rem;
+  line-height: 6.8rem;
+  padding-right: 12.8rem;
 }
 
 .tag-capital {
-  font-size: 14rem;
+  font-size: 22.4rem;
   text-align: right;
-  line-height: 14rem;
+  line-height: 22.4rem;
   color: var(--clr-secondary);
 }
 
@@ -306,7 +311,7 @@ a {
   flex-direction: row;
   justify-content: center;
   align-items: flex-start;
-  padding: 5rem 2.5rem;
+  padding: 8rem 4rem;
 }
 
 .why-container {
@@ -316,7 +321,7 @@ a {
   align-items: start;
   flex-direction: row;
   justify-content: center;
-  padding: 5rem 2.5rem;
+  padding: 8rem 4rem;
 }
 
 .why-we h3,
@@ -324,14 +329,14 @@ a {
   text-align: right;
   font-family: var(--body), sans-serif;
   white-space: nowrap;
-  font-size: 6rem;
+  font-size: 9.6rem;
   font-weight: 400;
 }
 
 .about-para,
 .why-we-para {
-  padding: 10rem 0 0 4rem;
-  font-size: 1.50rem;
+  padding: 16rem 0 0 6.4rem;
+  font-size: 2.4rem;
   font-weight: 300;
 }
 
@@ -347,11 +352,11 @@ a {
 .value-wrapper h3 {
   font-family: var(--body);
   text-transform: uppercase;
-  font-size: 14rem;
+  font-size: 22.4rem;
   font-weight: 300;
   white-space: nowrap;
-  padding-right: 3rem;
-  letter-spacing: -0.25rem;
+  padding-right: 4.8rem;
+  letter-spacing: -0.4rem;
   animation: move-rtl 7000ms linear infinite;
 }
 
@@ -374,23 +379,23 @@ a {
 @media (max-width:900px) {
   .tagline-container {
     height: 100%;
-    padding: 3rem 1.25rem;
+    padding: 4.8rem 2rem;
     display: flex;
     flex-direction: column;
     text-transform: uppercase;
   }
 
   .tagline-small {
-    font-size: 2rem;
+    font-size: 3.2rem;
     padding-right: 45%;
-    line-height: 2rem;
+    line-height: 3.2rem;
   }
 
   .tag-capital {
-    font-size: 7rem;
+    font-size: 11.2rem;
     text-align: right;
-    padding-top: 3rem;
-    line-height: 8.25rem;
+    padding-top: 4.8rem;
+    line-height: 13.2rem;
     color: var(--clr-secondary)
   }
 
@@ -400,24 +405,24 @@ a {
     width: 100%;
     flex-direction: column;
     align-items: flex-start;
-    padding: 3rem 1.25rem;
+    padding: 4.8rem 2rem;
   }
 
   .about-title h3,
   .why-we h3 {
     text-align: left;
-    font-size: 4rem;
+    font-size: 6.4rem;
   }
 
   .about-para,
   .why-we-para {
     height: 100%;
-    font-size: 1.5rem;
+    font-size: 2.4rem;
     font-weight: 300;
-    padding: 3rem 0 2rem 3rem;
+    padding: 4.8rem 0 3.2rem 4.8rem;
   }
 
   .value-wrapper h3 {
-    font-size: 8rem;
+    font-size: 12.8rem;
   }
 }
